input component structure

--- a/app/assets/styles/main.scss
+++ b/app/assets/styles/main.scss
@@ -13,6 +13,7 @@
 /* ----- Component Styles ----- */
 
 // Page-specific overrides for a given component should still be placed in the *component* scss.
+@import "../../components/input/input";
 
 
 /* ----- Page-Specific Styles ----- */
