--- a/app/layouts/default.hbs
+++ b/app/layouts/default.hbs
@@ -33,6 +33,7 @@
         <!-- endbuild -->
 
         <!-- build:js(app) assets/scripts/main.js -->
+        <script src="components/input/input.js"></script>
         <script src="assets/scripts/core/controller.js"></script>
         <script src="assets/scripts/util.js"></script>
         <script src="assets/scripts/global.js"></script>
