--- a/app/pages/index/index.hbs
+++ b/app/pages/index/index.hbs
@@ -1,8 +1,3 @@
 <div class="index" data-action="index">
-    <center>
-
-         <h1>Hello World!</h1>
-        <p>New to Starterkit? Read the <a href="https://gitlab.digitas.com/starter-kit/generator-starterkit/wikis/home">docs</a></p>
-
-    <center>
+ {{> input }}
 </div>
