--- a/app/components/input/input.hbs
+++ b/app/components/input/input.hbs
@@ -1,3 +1,5 @@
 <div class="input" data-action="input">
-
+    <div class="input-container">
+        <input class='input-field' type='text'>
+    </div>
 </div>
