--- a/app/layouts/default.hbs
+++ b/app/layouts/default.hbs
@@ -23,9 +23,9 @@
             {% body %}
         </div>
 
-        {{!--
-        <script src="assets/scripts/vendor/jquery-2.2.4.min.js"></script>
-        --}}
+        
+        <script src="bower_components/jquery/dist/jquery.min.js"></script>
+        
 
         <!-- build:jsvendor(app) assets/scripts/vendor/vendor.js -->
         <!-- bower:js -->
